--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Stretchies</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,21 +23,21 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
+            href="https://discord.gg/ctq7uVwT6y"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://twitter.com/CodeCats10k"
+            href="https://twitter.com/StretchiesN"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/stretchies"
             target="_blank"
             rel="noopener noreferrer"
           >
@@ -56,7 +56,7 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
+          data-date="Apr 30, 2022 14:00:00 UTC"
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
@@ -78,11 +78,11 @@
             <p class="count-text">Sec</p>
           </li>
         </ul>
-        <h1>NFT Drop Coming Soon!!</h1>
+        <h1>NFT Drop Coming 30th April 2022</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
+        <p>5000 Stretchers will be released into the freedom to stretch away!</p>
+        <a href="https://discord.gg/ctq7uVwT6y" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
+          ><span>Join the Community server!</span>
         </a>
       </div>
     </section>
