--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="/">
+          <a href="stretchiesnft.com/home">
             <img src="images/x-icon/favicon-32x32.png" alt="logo" />
           </a>
         </div>
